@@ -384,6 +384,7 @@ To submit translations for your native language
   <string id="1125">User Job 2 Enabled</string>
   <string id="1126">User Job 3 Enabled</string>
   <string id="1127">User Job 4 Enabled</string>
+  <string id="1128">Recording Profile</string>
   
   <string id="1120">Save</string>
   <string id="1121">Cancel</string>
