@@ -63,7 +63,7 @@ USERJOB1_ENABLED = 1124
 USERJOB2_ENABLED = 1125
 USERJOB3_ENABLED = 1126
 USERJOB4_ENABLED = 1127
-
+RECORDING_PROFILE = 1128
 
 # Recordings Window
 SORT = 853
