@@ -7,6 +7,7 @@ xx/xx/2011 MythBox 1.0.3
     - Selecting an upcoming recording in the TV Guide allows you to
       edit its recording schedule
     - Issue 155 - User Jobs added to the Create/Edit Schedule window
+    - Recording Profile added to Create/Edit Schedule window
     - TVDB banners added to Watch TV and TV Guide windows
     - Optimized retrieval of upcoming recordings based on schedule
       change events from the backend
